fixing title display on ecommerce project page on mobile

--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -125,7 +125,7 @@ p.name-line.active {
 	}
 }
 @media screen and (max-width:440px) {
-	#bce-title {
+	#bce-title, #autostore-title {
 		font-size:2.1rem;
 	}
 	h2 {
